cmake_minimum_required(VERSION 3.12)

project(jxglib C CXX ASM)

add_subdirectory(Canvas)
add_subdirectory(CmdLine)
add_subdirectory(Common)
add_subdirectory(Display)
add_subdirectory(DMA)
add_subdirectory(Drawable)
add_subdirectory(Flash)
add_subdirectory(Font)
add_subdirectory(FS)
add_subdirectory(Image)
add_subdirectory(Interp)
add_subdirectory(LineBuff)
add_subdirectory(LVGL)
add_subdirectory(Mouse)
add_subdirectory(PIO)
add_subdirectory(Serial)
add_subdirectory(Stdio)
add_subdirectory(Stream)
add_subdirectory(Terminal)
add_subdirectory(TouchScreen)
add_subdirectory(UART)
add_subdirectory(USBDevice)
add_subdirectory(USBHost)

add_subdirectory(device)

set(JXGLIB_DIR ${CMAKE_CURRENT_LIST_DIR} PARENT_SCOPE)

function(jxglib_gen_tusb_config_host target)
    configure_file(${JXGLIB_DIR}/template/tusb_config.h.host ${CMAKE_CURRENT_BINARY_DIR}/tusb_config.h)
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
endfunction()
