cmake_minimum_required(VERSION 3.12)

project(jxglib C CXX ASM)

add_subdirectory(Canvas)
add_subdirectory(Common)
add_subdirectory(Display)
add_subdirectory(DMA)
add_subdirectory(Drawable)
add_subdirectory(Flash)
add_subdirectory(Font)
add_subdirectory(FS)
add_subdirectory(I2C)
add_subdirectory(JSON)
add_subdirectory(Image)
add_subdirectory(Interp)
add_subdirectory(LABOPlatform)
add_subdirectory(LineBuff)
add_subdirectory(LogicAnalyzer)
add_subdirectory(LVGL)
add_subdirectory(Mouse)
add_subdirectory(PIO)
add_subdirectory(PWM)
add_subdirectory(Resets)
add_subdirectory(RTC)
add_subdirectory(Serial)
add_subdirectory(Shell)
add_subdirectory(SPI)
add_subdirectory(Terminal)
add_subdirectory(TouchScreen)
add_subdirectory(UART)
add_subdirectory(USBDevice)
add_subdirectory(USBHost)
add_subdirectory(WiFi)

add_subdirectory(device)

set(JXGLIB_DIR ${CMAKE_CURRENT_LIST_DIR} PARENT_SCOPE)

function(jxglib_set_if_undefined VAR VALUE)
	if (NOT DEFINED ${VAR})
		set(${VAR} "${VALUE}" PARENT_SCOPE)
	endif()
endfunction()

function(jxglib_set01 VAR)
	if (${VAR})
		set(${VAR} 1 PARENT_SCOPE)
	else()
		set(${VAR} 0 PARENT_SCOPE)
	endif()
endfunction()
